Styling home page complete. On to tabs. Next is font

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,33 +1,50 @@
-<div>
+<div class="parent">
   <div>
-    <p class="comic-bio">
-      Welcome to ToonVerse, a vibrant WEB3 Art Development platform. Our unique tokenomics make it incredibly straightforward 
-      to dive into the world of our NFTs. Start by minting a DevilCat. The fun doesn't stop there. 
-      Stake your DevilCat to earn $TOON tokens, the heart of our ecosystem. Use your $TOON to mint future collections, 
-      bringing to life an array of quirky characters and fascinating worlds. We aim to continuously grow the $TOON 
-      ecosystem by offering entire collections for $TOON or ETH. Moreover, we launchpad other projects with exceptional 
-      ART and DEV work to further enrich the $TOON ecosystem. Adventure awaits in the ToonVerse!</p><br><br><br>
-    <img src="../../../assets/toonverse/multiBanner.png" alt="logo" class="centered-image" />
+    <br><br>
+    <br><br>
+    <br><br>
+    <br><br>
+    <br><br>
+    <div class="parent-container">
+      <img src="../../../assets/toonverse/multiBanner.png" alt="logo" class="centered-image" />
+      <div class="comic-bio">
+        <p>
+          Welcome to ToonVerse, a vibrant WEB3 Art Development platform. Our unique tokenomics make it incredibly straightforward 
+          to dive into the world of our NFTs.
+          Stake your DevilCat to earn $TOON tokens, the heart of our ecosystem. Use your $TOON to mint future collections, 
+          bringing to life an array of quirky characters and fascinating worlds. We aim to continuously grow the $TOON 
+          ecosystem by offering entire collections for $TOON or ETH. Moreover, we launchpad other projects with exceptional 
+          ART and DEV work to further enrich the $TOON ecosystem. <br>Adventure awaits in the ToonVerse!
+        </p>
+      </div>
+    </div>  
+    <br><br>
+    <br><br>
+    <br><br>
+    <br><br>
+    <br><br>
     <br><br>
     <h4>
-      <button class="home-item" style="margin: 1%; color: purple;"> <a style="margin: 10%;" href="https://etherscan.io/token/0x1c4a28690482b03f6991c8c24295016cba197c12#code">View Contract</a></button>
-      <button class="home-item" style="margin: 1%;"> <a href="https://opensea.io/collection/toonversestudios">View Opensea</a></button>
-      <button class="home-item" style="margin: 1%;"> <a href="https://rarible.com/toonverseStudios">View Rarible</a></button>
-      <button class="home-item" style="margin: 1%;"> <a href="https://hub.auraexchange.org/collection/ethereum/0x1c4a28690482b03f6991c8c24295016cba197c12">View Aura</a></button>
+      <button class="home-item" style="margin: 1%;"> <a style="color: white;" href="https://etherscan.io/token/0x1c4a28690482b03f6991c8c24295016cba197c12#code">View Contract</a></button>
+      <button class="home-item" style="margin: 1%;"> <a style="color: white;" href="https://opensea.io/collection/toonversestudios">View Opensea</a></button>
+      <button class="home-item" style="margin: 1%;"> <a style="color: white;" href="https://rarible.com/toonverseStudios">View Rarible</a></button>
+      <button class="home-item" style="margin: 1%;"> <a style="color: white;" href="https://hub.auraexchange.org/collection/ethereum/0x1c4a28690482b03f6991c8c24295016cba197c12">View Aura</a></button>
     </h4>
   </div>
-
+  <br><br>
+  <br><br>
+  <br><br>  
+  <br><br>
   <div >
-    <div class="container">
+    <div class="comic-bio2">
       <div class="card-body">
-        <h6>**Minting Soon **</h6>
+        <h6>Now Minting</h6>
         <p>EL GATO DIABLO!</p>
 
         <img id="center-img-gif" src="../../../assets/elgatodiablo/elgatodiabloGIF.webp" alt="logo" height="20%"
           width="20%" style="border-radius: 5%" />
         <br>
-        <br>
-        <p> Check back May 7th...
+        <p>
           <br>
 
           At the request of our community based off the original design of our genesis DevilCatz collection.
@@ -42,9 +59,9 @@
 
         <button class="home-item" style="margin: 1%;" [routerLink]="['/elgatodiablo']">View Mint!</button>
         <br>
-        <button class="home-item" style="margin: 1%;"><a href="https://opensea.io/collection/elgatodiablo">View Opensea</a></button>
+        <button class="home-item" style="margin: 1%;"><a style="color: white;" href="https://opensea.io/collection/elgatodiablo">View Opensea</a></button>
         <br>
-        <button class="home-item" style="margin: 1%;"><a href="https://etherscan.io/address/0xa8b62866020970943de4f0e6fc4acf3e31636346#code">View Contract </a></button>
+        <button class="home-item" style="margin: 1%;"><a style="color: white;" href="https://etherscan.io/address/0xa8b62866020970943de4f0e6fc4acf3e31636346#code">View Contract </a></button>
       </div>
     </div>
   </div>
@@ -53,7 +70,7 @@
   <br>
   <br>
 
-  <div class="container" style="margin-bottom: 100px; margin-top:25px">
+  <div class="container" style="border-radius: 15px; margin-bottom: 100px; margin-top:25px">
     <div class="row"
       style="  justify-content: center; padding: 15px;background-color: aliceblue;border-bottom-style: double;">
       <div class="col-md-2">Price</div>
@@ -311,12 +328,10 @@
   <br>
   <br>
 
-  <div class="container" id="text" style="width: 85%;">
+  <div class="comic-bio2" id="text" style="width: 85%;">
 
-    <br>
-    <br>
 
-    <h5>
+    <h5 style="text-align: center; align-self: center;">
       <u> Legal Disclaimer</u>
     </h5>
     <p>
@@ -336,8 +351,6 @@
       you
       are in compliance with your local laws and regulations before
       you make any purchase.
-      <br><br><br>
-
     </p>
   </div>
 
