--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,10 @@
       text-align: center;margin-bottom: 3%;">
 
 
-        <img id="center-img" src="../../../assets/toonverse/tvlogo.gif" alt="logo" height="69%" width="69%"
+<br><br>
+<br><br>  
+<br><br>
+        <img id="center-img" src="../../../assets/logobannerStatic.png" [routerLink]="['/buytoon']" alt="logo" height="69%" width="69%"
           style="position: relative;top: -20px; border-radius: 5%; object-fit: contain; height: auto;" />
 
         <router-outlet></router-outlet>
