--- a/src/app/components/viewcatz/viewcatz.component.html
+++ b/src/app/components/viewcatz/viewcatz.component.html
@@ -1,34 +1,36 @@
-<div class="center-div" style="display: grid;justify-items: center;margin-bottom: 20%;">
+<div>
 
-    <h6 style="font-weight: bold; "><u>** View Your ART or Others!
-            **</u> </h6>
+    <div class="parent-container">
+        <br>
+        <br>        <br>
+        <br>
+        <br>
+        <br>
 
+        <div class="comic-bio">
+            <h6 style="font-weight: bold; align-self: center;"><u>View Your ART or Others!</u> </h6>
+   
+        <!--
+            Select which one begin
+        -->    
 
-
-    <!--
-        Select which one begin
-    -->
-    <div class="row" *ngIf="!viewDevilCatz && !viewFruitTown " style="justify-content: center;display: block;">
-
-        <button class="styled" (click)="toggleViewDevilCatz()">
-
-            Search DevilCatz
-
-        </button>
-        <br><br>
-        <button class="styled" style="max-width: fit-content;" (click)="toggleViewFtg()">
-
-            Search FruitTownGremlins.WtFruit
-        </button>
-    </div>
-    <!--
-        Select which one begin
-    -->
-
-
-
-
-        <div class="container" style="max-width: 90%;
+        <div *ngIf="!viewDevilCatz && !viewFruitTown " >
+    
+            <button class="home-item" style="margin: 1%;align-self: center;max-width: fit-content;" (click)="toggleViewDevilCatz()">
+    
+                Search DevilCatz
+    
+            </button>
+            <br><br>
+            <button class="home-item" style="margin: 1%;align-self: center; max-width: fit-content;" (click)="toggleViewFtg()">
+    
+                Search FruitTownGremlins.WtFruit
+            </button>
+        </div>
+        <!--
+            Select which one begin
+        -->
+        <div class="comic-bio" style="max-width: 90%;
         justify-content: center;
         justify-items: center;
         display: grid;" *ngIf="viewDevilCatz">
@@ -44,17 +46,16 @@
                 (0x61DED8A72cDc7762D159ab46bE880BE7127A2DeF)
             </p>
             <div class="row" style="justify-content: center;margin-bottom: 5%;">
-                <div class="col-md">
-                    <div id="card-lightblue" style="min-height: 100%;
+                <div class="comic-bio2">
+                    <div style="min-height: 100%;
                     max-width: 350px;
                     margin-left: auto;
-                    margin-right: auto;
-                    border: 1mm ridge pink;">
+                    margin-right: auto;">
                         <p>Eth Address</p>
                         <p>Lookup</p>
                         <mdb-form-control>
                             <input mdbInput (ngModelChange)="updateSearchedAddress($event)" [ngModel]="searchedAddress"
-                                type="text" id="typeText" class="styled" style="border: 1mm ridge pink;"
+                                type="text" id="typeText" class="comic-bio2" style=" background-color: rgb(16, 25, 177); border-radius: 15px;"
                                 placeholder="Eth Address" /><br>
                             <button mdbLabel (click)="searchByEthAddress()" class="styled"
                                 for="typeText">Search</button>
@@ -65,18 +66,17 @@
                 </div>
                 &nbsp;
 
-                <div class="col-md">
-                    <div id="card-lightblue" style="min-height: 100%;
+                <div class="comic-bio2">
+                    <div style="min-height: 100%;
                     max-width: 350px;
                     margin-left: auto;
-                    margin-right: auto;
-                    border: 1mm ridge pink;">
+                    margin-right: auto;">
                         <p>DevilCat ID#</p>
                         <p>Lookup</p>
                         <mdb-form-control>
                             <input mdbInput (ngModelChange)="updateSearchedID($event)" [ngModel]="searchedId"
-                                type="number" min="0" max="2222" id="typeText" placeholder="DevilCatID#" class="styled"
-                                style="border: 1mm ridge pink;" /><br>
+                                type="number" min="0" max="2222" id="typeText" placeholder="DevilCatID#" style="border-radius: 15px; background-color: rgb(16, 25, 177);" class="comic-bio2"
+                                 /><br>
                             <button (click)="searchById()" class="styled" for="typeText">Search</button>
                         </mdb-form-control>
                     </div>
@@ -84,11 +84,26 @@
             </div>
         </div>
 
+        </div>
+
+      </div>  
+
+      <br><br><br><br><br><br><br><br>
+      <br><br><br><br><br><br><br><br>
+      <br>
+      <br>
+      <br>
+
+
+
+      <br><br><br><br>
+        
+
         <div class="container" style="max-width: 90%;
         justify-content: center;
         justify-items: center;
         display: grid;" *ngIf="viewFruitTown">
-            <p><button class="styled" (click)="clear()">
+            <p><button class="home-item" (click)="clear()">
 
                     Back
                 </button> <br>FruitTownGremlins.WtFruit Lookup <br>
