--- a/src/app/components/viewcatz/viewcatz.component.scss
+++ b/src/app/components/viewcatz/viewcatz.component.scss
@@ -45,4 +45,108 @@
   
   }
 
+
+  .home-item {
+    background-color: #007BFF;
+    border: none;
+    color: white;
+    padding: 10px 24px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 12px;
+    transition: background-color 0.5s;
+  }
   
+  .home-item:hover {
+    background-color: #0056b3; /* Darker shade of button color on hover */
+  }
+
+  .comic-bio {
+    text-align: center; align-self: center;
+    background-color: #58b3ec;
+    padding: 20px;
+    border-radius: 15px;
+    color: #FAFAFA;
+    font-family: 'Roboto', sans-serif;
+    font-size: 18px;
+    line-height: 1.5;
+    width: 70%;
+    margin: 0 auto;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center; /* Changed from flex-start */
+    justify-content: center;
+    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
+    transition: all 0.3s ease-in-out;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 100%;
+    font-family: 'Roboto', sans-serif;
+  }
+  .comic-bio2 {
+    background-color: #58b3ec;
+    padding: 20px;
+    border-radius: 15px;
+    color: #FAFAFA;
+    font-family: 'Roboto', sans-serif;
+    font-size: 18px;
+    line-height: 1.5;
+    width: 70%;
+    margin: 0 auto;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
+    font-family: 'Roboto', sans-serif;
+  }
+  
+    .comic-bio3 {
+    text-align: center; align-self: center;
+    background-color: #0999f3;
+    padding: 20px;
+    border-radius: 15px;
+    color: #FAFAFA;
+    font-family: 'Roboto', sans-serif;
+    font-size: 18px;
+    line-height: 1.5;
+    width: 70%;
+    margin: 0 auto;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center; /* Changed from flex-start */
+    justify-content: center;
+    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
+    transition: all 0.3s ease-in-out;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 100%;
+    font-family: 'Roboto', sans-serif;
+  }
+  .parent-container {
+    font-family: 'Roboto', sans-serif;
+  
+    position: relative;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+  }
+  
+  
+  .parent{
+    font-family: 'Roboto', sans-serif;
+
+    text-align: center; align-self: center;
+    position: relative;
+    width: 100%;
+    padding: 5%;
+  }
