--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -48,7 +48,9 @@
         <li class="nav-item">
           <p id="navbar-text"(click)="basicNavbar.toggle()" class="styled" [routerLink]="['/buytoon']">Buy $TOON</p>
         </li>
-
+        <li class="nav-item">
+          <p id="navbar-text"(click)="basicNavbar.toggle()" class="styled" [routerLink]="['/buytoon']">my new button</p>
+        </li>
 
         <!-- <li class="nav-item" id="nav-item">
           <p id="navbar-text" (click)="basicNavbar.toggle()" class="styled" [routerLink]="['/about']">About</p>
