--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,7 +13,7 @@
       text-align: center;margin-bottom: 3%;">
 
 
-        <img id="center-img" src="../../../assets/toonverse/greenCat.png" alt="logo" height="15%" width="15%"
+        <img id="center-img" src="../assets/toonverse/logobanner.gif" alt="logo" height="15%" width="15%"
           style="position: relative;top: -20px; border-radius: 5%; object-fit: contain; height: auto;" />
 
         <router-outlet></router-outlet>
